--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
         <script src="resources/github-api.js"></script>
     </head>
     <body>
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" id="shapes1">
-            <path fill="#EA9658" d="M53.8,-48.6C62.2,-32.2,56.5,-10.3,50.9,10.6C45.4,31.5,39.9,51.5,26.9,58.8C13.9,66.2,-6.5,61.1,-25.2,52.1C-43.8,43.2,-60.7,30.4,-64.7,14.4C-68.6,-1.6,-59.6,-21,-46.7,-38.4C-33.7,-55.8,-16.9,-71.3,2.9,-73.6C22.6,-75.9,45.3,-65,53.8,-48.6Z" transform="translate(100 100)" />
-        </svg>
-
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" id="shapes2">
-            <path fill="#074456" d="M29.3,-27.4C35.6,-15.5,36.6,-3.4,36.4,12.7C36.2,28.9,34.8,49.1,21.9,61.5C9,73.8,-15.4,78.2,-33.8,69.6C-52.1,60.9,-64.4,39.2,-66,18.9C-67.6,-1.4,-58.5,-20.4,-45.7,-33.8C-32.9,-47.1,-16.5,-54.9,-2.5,-52.9C11.5,-50.9,23,-39.2,29.3,-27.4Z" transform="translate(100 100)" />
-          </svg>
+        <img src="resources/blob1.svg" alt="" id="shapes1">
+        <img src="resources/blob2.svg" alt="" id="shapes2">
 
         <!-- Title Page -->
         <nav class="navbar sticky-top bg-body-tertiary">
@@ -50,24 +45,25 @@
                     </div>
                 </div>
                 <div class="col-xxl-6">
-                    <div class="card mb-3 lang-tools">
-                        <div class="card-header bg-transparent">Language & Tools I used: </div>
-                        <div class="card-body"> 
+                    <div class="card mb-3" id="card-lang-tools">
+                        <div class="card-header bg-transparent" id="lang-tools">Language & Tools I used: </div>
+                        <div class="card-body" id="lang-tools"> 
                             <i class="devicon-laravel-plain colored"></i>
                             <i class="devicon-php-plain colored"></i>
                             <i class="devicon-go-original-wordmark colored"></i>
                             <i class="devicon-html5-plain colored"></i>
-                            <i class="devicon-css3-plain colored"></i>
+                            <i class="devicon-css3-plain colored"></i>        
+                            <i class="devicon-javascript-plain colored"></i>
                         </div>
                       </div>
                 </div>
             </div>
-
             <hr>
             <div class="row row-cols-1 row-cols-md-3 g-4" id="reposCard">
                 <!-- Looping data trough JS GitHub API -->
             </div>
         </div>
+
         <!-- End of Container Page -->
     
         <!-- Footer Social Media -->
