add some new programming languanges

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-xl-7 align-self-center">
                     <p id="github-desc">
-                        Developing web using programming languages ​​such as PHP with Laravel, Golang, Javascript. I also have knowledge in database management, and API management.
+                        Developing web using programming languages ​​such as PHP with Laravel, Golang, Javascript, and Kotlin also. I also have knowledge in database management, and API management.
                     </p>
                 </div>
             </div>
