changes title & desc

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                 <div class="col-md-5 github-profile">
                     <div class="row">
                         <p id="github-name">Dims310</p>
-                        <p id="github-title">The backend developer</p>
+                        <p id="github-title">The Software Engineer</p>
                     </div>
                 </div>
                 <div class="col-xl-7 align-self-center">
                     <p id="github-desc">
-                        Developing web using programming languages ​​such as PHP with Laravel, Golang, Javascript, and Android with Kotlin. I also have knowledge in database management, and API management.
+                        Proficient in website development, database optimization, and UI/UX design, honed through academic and project work, with a commitment to creating innovative solutions.
                     </p>
                 </div>
             </div>
